<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    tools:context="com.luxoft.blockchainlab.poc.ssi.ssimobile.views.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                style="@style/textViewVerifierMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/select_age_group_to_confirmation" />


            <LinearLayout
                android:id="@+id/linearLayoutCreateQR16Plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_rectangle_unavailable"
                android:clickable="false"
                android:enabled="false"
                android:layout_marginBottom="16dp"
                android:weightSum="8">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textViewRedButtonBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/plus_16_age_group" />

                    <TextView
                        style="@style/textViewRedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/wine_beer_cider"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/shape"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayoutCreateQR18Plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_rectangle_unavailable"
                android:clickable="false"
                android:enabled="false"
                android:layout_marginBottom="32dp"
                android:weightSum="8">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textViewRedButtonBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/plus_18_age_group"/>

                    <TextView
                        style="@style/textViewRedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/spirits_aperitifs_alcopops"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/shape"
                        />
                </LinearLayout>

            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:id="@+id/linearLayoutConnecting"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:weightSum="3">-->

<!--                <ProgressBar-->
<!--                    style="@style/MyProgressBar"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:progress="75"-->
<!--                    android:layout_weight="1"/>-->

<!--                <TextView-->
<!--                    android:id="@+id/textViewConnecting"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:padding="16dp"-->
<!--                    android:text="     Connecting to server"-->
<!--                    android:textColor="@color/textGrey"-->
<!--                    android:layout_weight="2"-->
<!--                    android:textSize="16sp" />-->
<!--            </LinearLayout>-->
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
